--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class=" input-group form-outline">
                 <input class="form-control" type="text" name="note" placeholder="Enter a note">
                 <!-- <label class="form-label" for="typeText">Enter a note</label> -->
-                <button type="submit" class="btn btn-primary">Save Note</button>
+                <button type="submit" id="add-note-button" class="btn btn-primary">Save Note</button>
             </div>
             
         </form>
