updating form id

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container main_app" id="app_container">
         <h3><strong> Taking App</strong></h3>
-        <form action="/add" method="post" class="spacer-top">
+        <form action="/add" method="post" class="spacer-top" id="add-note-form">
             <div class=" input-group form-outline">
                 <input class="form-control" type="text" name="note" placeholder="Enter a note">
                 <!-- <label class="form-label" for="typeText">Enter a note</label> -->
