updating input id

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h3><strong> Taking App</strong></h3>
         <form action="/add" method="post" class="spacer-top" id="add-note-form">
             <div class=" input-group form-outline">
-                <input class="form-control" type="text" name="note" placeholder="Enter a note">
+                <input id="note-input" class="form-control" type="text" name="note" placeholder="Enter a note">
                 <!-- <label class="form-label" for="typeText">Enter a note</label> -->
                 <button type="submit" id="add-note-button" class="btn btn-primary">Save Note</button>
             </div>
