--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container main_app" id="app_container">
-        <h3><strong> Taking App</strong></h3>
+        <h3><strong> Taking Notes App</strong></h3>
         <form action="/add" method="post" class="spacer-top" id="add-note-form">
             <div class=" input-group form-outline">
                 <input id="note-input" class="form-control" type="text" name="note" placeholder="Enter a note">
